examples/test/testpolicy16938.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16938
  namespace: namespace135
spec:
  podSelector:
    matchLabels:
      key2: value17
      key40: value32
      key20: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value36
          key27: value16
          key37: value16
      podSelector:
        matchLabels:
          key41: value19
          key11: value45
